Critical Updategit add .

--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -18,10 +18,10 @@
 
 
     <Button
-        android:id="@+id/logOutButton_testVersionGitHub"
+        android:id="@+id/gayDudeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOGOUT"
+        android:text="FRANCO IS GAY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
