--- a/app/src/main/res/layout/activity_log_diary_homepage.xml
+++ b/app/src/main/res/layout/activity_log_diary_homepage.xml
@@ -22,14 +22,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Button" />
-        </LinearLayout>
+            android:orientation="vertical"/>
     </ScrollView>
 
     <TextView
