--- a/app/src/main/res/layout/activity_create_log_entry.xml
+++ b/app/src/main/res/layout/activity_create_log_entry.xml
@@ -7,6 +7,55 @@
     tools:context=".createLogEntry">
 
     <LinearLayout
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.179">
+
+        <EditText
+            android:id="@+id/workoutNameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="27dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/dateEditText"
+            android:layout_width="match_parent"
+            android:layout_height="27dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/startTimeEditText"
+            android:layout_width="match_parent"
+            android:layout_height="27dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/durationEditText"
+            android:layout_width="match_parent"
+            android:layout_height="27dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/bodyWeightEditText"
+            android:layout_width="match_parent"
+            android:layout_height="27dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -23,7 +72,7 @@
 
             <TextView
                 android:id="@+id/leftWorkoutNameTextView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="WORKOUT NAME"
                 android:textColor="#000000"
@@ -117,9 +166,9 @@
 
     <Button
         android:id="@+id/doneButton"
-        android:layout_width="114dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="103dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="36dp"
         android:text="DONE"
         android:textSize="18dp"
