--- a/app/src/main/res/layout/activity_create_log_entry.xml
+++ b/app/src/main/res/layout/activity_create_log_entry.xml
@@ -7,7 +7,7 @@
     tools:context=".createLogEntry">
 
     <LinearLayout
-        android:visibility="invisible"
+        android:id="@+id/editTextLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -16,42 +16,54 @@
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.179">
+        app:layout_constraintVertical_bias="0.179"
+        android:visibility="visible">
 
         <EditText
             android:id="@+id/workoutNameEditText"
             android:layout_width="match_parent"
-            android:layout_height="27dp"
+            android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:text="PULL DAY"
+            android:textSize="10dp"
+            tools:ignore="HardcodedText" />
 
         <EditText
             android:id="@+id/dateEditText"
             android:layout_width="match_parent"
-            android:layout_height="27dp"
+            android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:textSize="10dp"
+            android:inputType="textPersonName"
+            android:text="03/22/2020" />
 
         <EditText
             android:id="@+id/startTimeEditText"
             android:layout_width="match_parent"
-            android:layout_height="27dp"
+            android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:text="3:25"
+            android:textSize="10dp" />
 
         <EditText
             android:id="@+id/durationEditText"
             android:layout_width="match_parent"
-            android:layout_height="27dp"
+            android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:text="60 mins"
+            android:textSize="10dp" />
 
         <EditText
             android:id="@+id/bodyWeightEditText"
             android:layout_width="match_parent"
-            android:layout_height="27dp"
+            android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:text="200lbs"
+            android:textSize="10dp"
+            android:inputType="textPersonName"/>
 
     </LinearLayout>
 
@@ -120,7 +132,8 @@
             android:id="@+id/rightLinearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/rightWorkoutNameTextView"
@@ -128,26 +141,30 @@
                 android:layout_height="wrap_content"
                 android:hint="CLICK"
                 android:textColor="#000000"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/rightDateTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
                 android:hint="CLICK"
-                android:textSize="20dp" />
+                android:textColor="#000000"
+                android:textSize="20dp"
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/rightStartTimeTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="CLICK"
+                android:visibility="visible"
                 android:textColor="#000000"
                 android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/rightDurationTextView"
+                android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="CLICK"
@@ -159,6 +176,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="CLICK"
+                android:visibility="visible"
                 android:textColor="#000000"
                 android:textSize="20dp" />
         </LinearLayout>
