--- a/app/src/main/res/layout/activity_create_log_entry.xml
+++ b/app/src/main/res/layout/activity_create_log_entry.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.179"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <EditText
             android:id="@+id/workoutNameEditText"
@@ -25,27 +25,23 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="PULL DAY"
-            android:textSize="10dp"
-            tools:ignore="HardcodedText" />
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/dateEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:textSize="10dp"
-            android:inputType="textPersonName"
-            android:text="03/22/2020" />
+            android:inputType="date"
+            android:textSize="20dp"/>
 
         <EditText
             android:id="@+id/startTimeEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="3:25"
-            android:textSize="10dp" />
+            android:inputType="time"
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/durationEditText"
@@ -53,21 +49,20 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="60 mins"
-            android:textSize="10dp" />
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/bodyWeightEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:text="200lbs"
-            android:textSize="10dp"
-            android:inputType="textPersonName"/>
+            android:textSize="20dp"
+            android:inputType="numberDecimal"/>
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -158,27 +153,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="CLICK"
-                android:visibility="visible"
                 android:textColor="#000000"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/rightDurationTextView"
-                android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="CLICK"
                 android:textColor="#000000"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/rightBodyWeightTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="CLICK"
-                android:visibility="visible"
                 android:textColor="#000000"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:visibility="visible" />
         </LinearLayout>
     </LinearLayout>
 
@@ -207,5 +202,20 @@
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/submitValuesButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="276dp"
+        android:layout_marginBottom="406dp"
+        android:text="SUBMIT VALUES"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
