--- a/app/src/main/res/layout/activity_create_log_entry.xml
+++ b/app/src/main/res/layout/activity_create_log_entry.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".createLogEntry">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.51">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
     <LinearLayout
         android:id="@+id/editTextLinearLayout"
         android:layout_width="wrap_content"
@@ -48,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|numberDecimal"
             android:textSize="20dp" />
 
         <EditText
@@ -105,15 +118,15 @@
                 android:id="@+id/leftDurationTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="DURATION"
+                android:text="DURATION(mins)"
                 android:textColor="#000000"
                 android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/leftBodyWeightTextView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="BODY WEIGHT"
+                android:text="BODY WEIGHT(lbs)"
                 android:textColor="#000000"
                 android:textSize="20dp" />
         </LinearLayout>
@@ -199,7 +212,7 @@
         android:text="TextView"
         android:textColor="#000000"
         android:textSize="30dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -210,12 +223,13 @@
         android:layout_marginStart="47dp"
         android:layout_marginTop="34dp"
         android:layout_marginEnd="276dp"
-        android:layout_marginBottom="406dp"
         android:text="SUBMIT VALUES"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.404"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.127" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
