last one for the night

--- a/app/src/main/res/layout/activity_create_log_entry.xml
+++ b/app/src/main/res/layout/activity_create_log_entry.xml
@@ -25,8 +25,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="start|top"
-                android:inputType="textMultiLine"
-                android:text="Franco\nFranco\nFranco" />
+                android:inputType="textMultiLine"/>
         </LinearLayout>
     </ScrollView>
 
