--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -132,15 +132,15 @@
                     android:orientation="vertical"
                     android:padding="16dp">
 
-                    <TextView
-                        android:layout_width="80dp"
+                    <Button
+                        android:id="@+id/notificationButton"
+                        android:layout_width="wrap_content"
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
-                        android:src="@drawable/ic_launcher_background"
-                        android:text="Functionality"
+                        android:text="Notifications"
                         android:textColor="#000000">
 
-                    </TextView>
+                    </Button>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
