--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -36,9 +36,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:foregroundGravity="right"
                 android:text="LOGOUT"
                 app:layout_constraintEnd_toEndOf="parent" />
+
+            <Button
+                android:id="@+id/settingsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="SETTINGS">
+
+            </Button>
         </LinearLayout>
 
 
@@ -133,11 +142,10 @@
                     android:padding="16dp">
 
                     <Button
-                        android:id="@+id/notificationButton"
                         android:layout_width="wrap_content"
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
-                        android:text="Notifications"
+                        android:text="Empty"
                         android:textColor="#000000">
 
                     </Button>
