--- a/app/src/main/res/layout/activity_setting_options.xml
+++ b/app/src/main/res/layout/activity_setting_options.xml
@@ -5,38 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".setNotifications">
+    android:orientation="vertical"
+    tools:context=".settingOptions">
 
     <Button
         android:id="@+id/notificationButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Create Log Activity Notification"
-        android:onClick="sendOnChannel1"/>
+        android:text="Notifications" />
 
     <Button
-        android:id="@+id/notification1"
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="sendOnChannel2"
-        android:text="Create ..." />
+        android:text="Setting 2" />
 
     <Button
-        android:id="@+id/notification2"
+        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="sendOnChannel3"
-        android:text="Create ..." />
-
-    <Button
-        android:id="@+id/notification3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="sendOnChannel4"
-        android:text="Create ..." />
-
-
-
+        android:text="Setting 3" />
 </LinearLayout>
