--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -6,37 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".tutorial">
 
-    <LinearLayout
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/playPushUpTutorial"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="PLAY PUSHUP TUTORIAL" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <VideoView
-            android:id="@+id/videoView"
-            android:layout_width="wrap_content"
-            android:layout_height="230dp" />
+            <Button
+                android:id="@+id/pushUpsButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Play PushUps" />
 
-        <Button
-            android:id="@+id/playPushUpTutorialButton_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="PLAY PUSHUP TUTORIAL" />
+            <VideoView
+                android:id="@+id/webView1"
+                android:layout_width="match_parent"
+                android:layout_height="230dp" />
 
-        <VideoView
-            android:id="@+id/videoView2"
-            android:layout_width="match_parent"
-            android:layout_height="230dp" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/crunchesButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Play Crunches" />
+
+            <VideoView
+                android:id="@+id/webView2"
+                android:layout_width="match_parent"
+                android:layout_height="230dp" />
+
+            <Button
+                android:id="@+id/squatsButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Play Squats" />
+
+            <VideoView
+                android:id="@+id/webView3"
+                android:layout_width="match_parent"
+                android:layout_height="230dp" />
+
+            <Button
+                android:id="@+id/lungesButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Play Lunges" />
+
+            <VideoView
+                android:id="@+id/webView4"
+                android:layout_width="match_parent"
+                android:layout_height="230dp" />
+
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
