--- a/app/src/main/res/layout/activity_log_diary_homepage.xml
+++ b/app/src/main/res/layout/activity_log_diary_homepage.xml
@@ -30,7 +30,7 @@
         android:id="@+id/buttonADDLOG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+ Add Log"
+        android:text="@string/add_log_home"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
         android:id="@+id/goBackToDashboardButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HOME"
+        android:text="@string/home_homepage"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,9 +57,9 @@
         android:layout_width="wrap_content"
         android:layout_height="51dp"
         android:layout_marginTop="16dp"
-        android:text="Log History"
+        android:text="@string/log_history_homepage"
         android:textColor="#000000"
-        android:textSize="30dp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/scrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
