--- a/app/src/main/res/layout/activity_create_notifications.xml
+++ b/app/src/main/res/layout/activity_create_notifications.xml
@@ -13,7 +13,7 @@
         android:id="@+id/notificationButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Create Log Activity Notification"
+        android:text="@string/create_log_activity_notification"
         android:onClick="sendOnChannel1"/>
 
     <Button
@@ -21,21 +21,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="sendOnChannel2"
-        android:text="Create ..." />
+        android:text="@string/create" />
 
     <Button
         android:id="@+id/notification2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="sendOnChannel3"
-        android:text="Create ..." />
+        android:text="@string/create" />
 
     <Button
         android:id="@+id/notification3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="sendOnChannel4"
-        android:text="Create ..." />
+        android:text="@string/create" />
 
 
 
