--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="LOGOUT"
+                android:text="@string/logout"
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <Button
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:text="SETTINGS">
+                android:text="@string/settings">
 
             </Button>
         </LinearLayout>
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/txt_dashBoardBitch"
                 android:layout_marginTop="6dp"
-                android:text="Fitness Application"
+                android:text="@string/fitness_application"
                 android:textColor="#000000"
                 android:textSize="14sp" />
 
@@ -82,7 +82,7 @@
             <ImageView
                 android:layout_width="62dp"
                 android:layout_height="62dp"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:src="@drawable/ic_launcher_background" />
 
         </RelativeLayout>
@@ -117,7 +117,7 @@
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
                         android:src="@drawable/ic_launcher_background"
-                        android:text="LOG"
+                        android:text="@string/log"
                         android:textColor="#000000">
 
                     </Button>
@@ -145,7 +145,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
-                        android:text="Empty"
+                        android:text="None"
                         android:textColor="#000000">
 
                     </Button>
@@ -175,9 +175,10 @@
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
                         android:src="@drawable/ic_launcher_background"
-                        android:text="Workout Planner"
+                        android:text="@string/workout_planner"
                         android:textColor="#000000"
-                        android:textSize="11dp">
+                        android:textSize="11sp"
+                        tools:ignore="SmallSp">
 
                     </Button>
                 </LinearLayout>
@@ -206,8 +207,8 @@
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
                         android:src="@drawable/ic_launcher_background"
-                        android:text="Tutorial"
-                        android:textSize="12dp"
+                        android:text="@string/tutorials"
+                        android:textSize="12sp"
                         android:textColor="#000000">
 
                     </Button>
@@ -236,7 +237,7 @@
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
                         android:src="@drawable/ic_launcher_background"
-                        android:text="Functionality"
+                        android:text="@string/functionality"
                         android:textColor="#000000">
 
                     </TextView>
@@ -265,7 +266,7 @@
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
                         android:src="@drawable/ic_launcher_background"
-                        android:text="Functionality"
+                        android:text="@string/functionality"
                         android:textColor="#000000">
 
                     </TextView>
@@ -294,7 +295,7 @@
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
                         android:src="@drawable/ic_launcher_background"
-                        android:text="Functionality"
+                        android:text="@string/functionality"
                         android:textColor="#000000">
 
                     </TextView>
@@ -323,7 +324,7 @@
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
                         android:src="@drawable/ic_launcher_background"
-                        android:text="Functionality"
+                        android:text="@string/functionality"
                         android:textColor="#000000">
 
                     </TextView>
