--- a/app/src/main/res/layout/activity_workout_planner.xml
+++ b/app/src/main/res/layout/activity_workout_planner.xml
@@ -10,7 +10,7 @@
         android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SUBMIT"
+        android:text="@string/submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
@@ -22,7 +22,7 @@
         android:id="@+id/doneButton"
         android:layout_width="93dp"
         android:layout_height="40dp"
-        android:text="DONE"
+        android:text="@string/done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="WORKOUT NAME"
+                android:text="@string/workout_name"
                 android:textColor="#000000"
                 android:autoSizeTextType="uniform" />
 
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="DATE TO PERFORM"
+                android:text="@string/date_to_perform"
                 android:textColor="#000000"
                 android:autoSizeTextType="uniform"/>
 
@@ -71,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TIME TO PERFORM"
+                android:text="@string/time_to_perform"
                 android:textColor="#000000"
                 android:autoSizeTextType="uniform"/>
 
@@ -80,7 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="REST BETWEEN SETS"
+                android:text="@string/rest_between_sets"
                 android:textColor="#000000"
                 android:autoSizeTextType="uniform" />
 
@@ -152,7 +152,7 @@
         android:layout_width="239dp"
         android:layout_height="35dp"
         android:autoSizeTextType="uniform"
-        android:text="WORKOUT PLANNER"
+        android:text="@string/workout_planner"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
