--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -24,8 +24,8 @@
                 android:layout_height="35dp"
                 android:layout_marginTop="4dp"
                 android:autoSizeTextType="uniform"
-                android:textColor="#000000"
                 android:text="@string/name"
+                android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,9 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-
-            </Button>
+                android:layout_marginEnd="16dp"/>
         </LinearLayout>
 
 
